--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&family=Poppins:wght@100;200;300;400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
+
+
 *{
     padding: 0;
     margin: 0;
@@ -9,6 +12,7 @@ html{
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    font-size: 62.5%;
 }
 
 body{
@@ -16,6 +20,7 @@ body{
     height: 100vh;
     background-repeat: no-repeat;
     /* background-position: 100% 100%; */
+    font-family: 'Poppins', sans-serif;
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -27,13 +32,20 @@ img{
     height: 22px;
 }
 h1{
-    font-size: 2.5rem;
+    font-size: 2.7rem;
 }
 h3{
-    font-size: 2rem;
+    font-size: 2.4rem;
+}
+p{
+    font-size: 1.5rem;
+    text-align: center;
+    padding-top: 3rem;
+    max-width: 70%;
 }
 
 /* modal hero */
+
 .gen{
     width: 100%;
     height: 100%;
@@ -59,7 +71,7 @@ h3{
     background-color: rgb(1, 128, 128);
     color: whitesmoke;
     text-transform: uppercase;
-    font-size: 0.7rem;
+    font-size: 1.1rem;
     font-weight: 700;
     letter-spacing: 0.1rem;
     transition: all 0.3s linear;
@@ -83,21 +95,22 @@ h3{
 }
 .closeBtn {
     position: absolute;
-    top: -6rem;
+    top: -15rem;
+    left: 14rem;
     border-radius: 50%;
     transition: all 0.3s linear;
 }
 .closeBtn:hover {
     cursor: pointer;
     transform: rotate(60deg) scale(.7);
-    /* transform: rotate(60deg) scale(1); */
     cursor: pointer;
 }
 .banner, .modalContainer{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 30rem;
+    flex-direction: column;
+    width: 40rem;
     margin: 0 auto;
     background-color: whitesmoke;
     border-radius: 10px;
@@ -113,16 +126,23 @@ h3{
 }
 
 /* media query */
-@media  all and (max-width:360px) {
-    h1{
-        font-size: 2rem;
-    }
-    h3{
-        font-size: 1.5rem;
-    }
-}
-@media screen and (max-width:510px) {
+
+@media screen and (max-width:420px) {
     .banner, .modalContainer{
         max-width: 92%;
     }
+    
 }
+@media all and (max-width:370px) {
+    .closeBtn {
+            left: 11rem;
+        }
+        p{
+            max-width: 100%;
+        }
+}
+ @media all and (max-width:270px) {
+     .closeBtn {
+         left: 8rem;
+     }
+ }
